DT-1426 - misaligned signup button fixed

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -972,10 +972,10 @@ footer.bk-footer .widget.profile .bk-profile-socialicons span {
 }
 
 .widget.signupform button, .widget.profile form fieldset button, .widget.blogsearch button {
-    width: 20%;
-    min-height: 60px;;
+    min-width: 100px;
+    min-height: 60px;
     line-height: 60px;
-    padding: 0;
+    padding: 0 20px;
     border: 0;
     background-color: @font-swatch7-background-color;
     font-family: @font-swatch7-font-family;
